Fixed float overflow bug in meme styles

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -8,6 +8,6 @@ label {
   margin-right: 1em;
 }
 
-input[type=text], input[type=file] {
+input[type=text], input[type=file], textarea {
   flex: 1;
 }
